[package]
name = "stochastic_optimizers"
version = "0.3.0"
edition = "2021"
authors = ["Benjamin Lieser"]
description = "Generic implementations of gradient based stochastic optimizing algorithms"
repository = "https://github.com/benjamin-lieser/stochastic_optimizers"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning", "optimization", "gradient", "adam", "ndarray"]

[dependencies]

num-traits = "0.2"
ndarray = {version = ">=0.15", optional = true}

[dev-dependencies]

tch = "0.13"

[features]

download-libtorch = ["tch/download-libtorch"]